<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/Menu"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Menu" />

    <Button
        android:id="@+id/Calendario"
        android:layout_width="140dp"
        android:layout_height="214dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="#B2E1A7"
        android:drawableTop="@drawable/calendario"
        android:drawablePadding="1dp"
        android:drawableTint="#FFFFFF"
        android:fontFamily="@font/comfortaa"
        android:onClick="IrCalendario"
        android:paddingVertical="45dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:paddingBottom="2dp"
        android:text="@string/Calendar"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:iconPadding="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <Button
        android:id="@+id/Cuentas"
        android:layout_width="140dp"
        android:layout_height="214dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="44dp"
        android:backgroundTint="#97D1E8"
        android:drawableTop="@drawable/baseline_manage_accounts_24"
        android:drawablePadding="1dp"
        android:drawableTint="#FFFFFF"
        android:fontFamily="@font/comfortaa"
        android:onClick="IrCuentas"
        android:paddingVertical="45dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:paddingBottom="2dp"
        android:text="@string/Accounts"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <Button
        android:id="@+id/Configuracion"
        android:layout_width="140dp"
        android:layout_height="214dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="#EA9393"
        android:drawableTop="@drawable/baseline_settings_24"
        android:drawablePadding="1dp"
        android:drawableTint="#FFFFFF"
        android:fontFamily="@font/comfortaa"
        android:onClick="IrConfiguracion"
        android:paddingVertical="45dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:paddingBottom="2dp"
        android:text="@string/Config"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:iconPadding="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Calendario" />

    <Button
        android:id="@+id/Acerca_de"
        android:layout_width="140dp"
        android:layout_height="214dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="44dp"
        android:backgroundTint="#E4CD91"
        android:drawableTop="@drawable/info"
        android:drawablePadding="1dp"
        android:drawableTint="#FFFFFF"
        android:fontFamily="@font/comfortaa"
        android:onClick="IrAcercaDe"
        android:paddingVertical="45dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:paddingBottom="2dp"
        android:text="@string/About"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Cuentas" />

</androidx.constraintlayout.widget.ConstraintLayout>